--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -38,11 +38,18 @@ body,
     transition: left 0.5s;
     left: -65px;
 
-    &:hover{
+    &:hover {
       transform: scale(1.05);
     }
-    &:active{
+
+    &:active {
       transform: scale(1);
+    }
+
+    img {
+      margin: 0;
+      background-color: white;
+      border-radius: 50%;
     }
   }
 
@@ -70,6 +77,8 @@ body,
 
 .height {
   flex: 1 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 .container {
@@ -93,7 +102,22 @@ body,
 
   h3 {
     text-align: center;
-    margin-bottom: 50px;
+    margin: 20px;
+  }
+}
+
+.start-game {
+  display: flex;
+  justify-content: center;
+
+  button {
+    width: 200px;
+    height: 80px;
+    font-size: 22px;
+    box-shadow: 2px 2px 5px rgb(116, 116, 116);
+    border: none;
+    outline: none;
+    position: relative;
   }
 }
 
@@ -123,6 +147,7 @@ body,
 }
 
 .interface {
+  display: none;
 
   &__buttons {
     display: flex;
@@ -149,6 +174,7 @@ body,
       width: 120px;
       height: 120px;
       box-shadow: 2px 2px 5px rgb(116, 116, 116);
+      background-color: white;
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -232,5 +258,8 @@ body,
     &__social-network {
       margin-top: 20px;
     }
+  }
+  .name-game {
+    padding-top: 20px;
   }
 }
