Improved code readability. Fixed bugs.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ body,
           align-items: center;
 }
 
-.interface__buttons_div #sum-of-points {
+.interface__buttons_div #player-points {
   font-size: 60px;
 }
 
